jobs4u.core/src/main/resources/PlugIns/RequirementsSpecifications/backEndDeveloperRequirements/JobRequirementsGrammar.g4
grammar JobRequirementsGrammar;

start: header requirements+ EOF;

header: text=STRING;

requirements: 'Requirement' id=INTEGER requirementType;

requirementType: trueOrFalseRequirement
                | shortAnswerRequirement
                | integerRequirement
                ;

trueOrFalseRequirement: text=STRING 'TrueOrFalse:' answer=BOOLEAN;

shortAnswerRequirement: text=STRING 'ShortAnswer:' answer=correctAnswer;

integerRequirement: text=STRING 'Integer:' answer=INTEGER;

correctAnswer: BOOLEAN | INTEGER | REAL | STRING;

// Tokens
STRING: '"' (~["\\] | '\\' .)* '"';
BOOLEAN: 'true' | 'false';
INTEGER: ('0' | [1-9][0-9]*);
REAL: [0-9]+ '.' [0-9]+;

// Skip comments and whitespace
COMMENT: '#' ~[\r\n]* -> skip;
WS: [ \t\r\n]+ -> skip;
